# fpga-router

./: .gitignore  Cargo.toml  README.md  flake.nix  map_net_io.py  mock_slack.py  pips_4x4.txt  test.fasm
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: cli.rs  display_helper.rs  logger.rs  main.rs
documentation/: cover.typ  main.typ  works.yaml
engine/: Cargo.toml
engine/src/: api.rs  dijkstra.rs  error.rs  fasm.rs  lib.rs  path_finder.rs  slack.rs  validate.rs
engine/src/fabric/: error.rs  graph.rs  mod.rs  node.rs  parser.rs  tile_manager.rs
engine/src/graph/: fabric_graph.rs  mod.rs  node.rs  parser.rs
engine/src/netlist/: error.rs  mod.rs  netlist_external.rs  netlist_internal.rs
engine/tests/: routing_tests.rs
fpga-backend/: Cargo.toml
fpga-backend/src/: main.rs
fpga-frontend/: index.html  package-lock.json  package.json  vite.config.ts
fpga-frontend/src/: App.tsx  index.css
gui/: Cargo.toml
gui/src/: main.rs
router/: Cargo.toml  RoutingListFormat.json
router/src/: api.rs  cli.rs  fabric_graph.rs  fasm.rs  lib.rs  logger.rs  main.rs  node.rs  path_finder.rs  path_finding_algo.rs  solver.rs  validate.rs
routing-fpga/: Cargo.toml
routing-fpga/src/: dijkstra.rs  graph_to_json.rs  logger.rs  node.rs  path_finder.rs  path_finding_algo.rs
src/: api.rs  cli.rs  dijkstra.rs  display_helper.rs  error.rs  fabric_graph.rs  fasm.rs  graph_to_json.rs  lib.rs  logger.rs  main.rs  netlist.rs  node.rs  path_finder.rs  route_plan.rs  slack.rs  solver.rs  typst_table.rs  validate.rs
src/graph/: fabric_graph.rs  mod.rs  node.rs
src/solver/: mod.rs  simple.rs  simple_steiner.rs  steiner.rs
sta/: Cargo.toml
sta/src/: analysis.rs  design.rs  lib.rs  main.rs  parsers.rs  report.rs
testing_utils/: Cargo.toml
testing_utils/src/: lib.rs
tests/data/: bel.txt  bel_4x4.txt  placement.json  timing_model.json
(+12 files in other folders)
