[package]
name = "router-cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde"]
serde = []

[dependencies]
router = { path = "../engine" }
anyhow = "1.0.102"
clap = { version = "4.5.54", features = ["derive"] }
clearscreen = "4.0.6"
csv = "1.4.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sha2 = "0.10.9"

[dev-dependencies]
testing_utils = { path = "../testing_utils" }
