[package]
name = "fpga-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
routing-fpga = {path = "../routing-fpga"}
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
axum = { version = "0.8.7", features = ["ws"] }
csv = "1.4.0"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.8", features = ["cors"] }
