[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
router = {path = "../engine"}

# Graphics
vello = { version = "0.2.1", features = ["wgpu"] } 
winit = { version = "0.30", features = ["rwh_06"] } # rwh_06 is critical for compatibility
pollster = "0.3"
anyhow = "1.0"

# Math and logic
kurbo = "0.11" # Vello uses this for all geometry
peniko = "0.2" # Vello uses this for colors/brushes
log = "0.4"
env_logger = "0.11"
