[package]
name = "routing-fpga"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "bench"

[[bin]]
name = "main"

[features]
default = ["JSON"]
JSON = []

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
